--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "18.2.0",
+    "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "lucide-react": "0.344.0",
     "framer-motion": "11.0.8"
